unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/tsaa__Session_Lobby_Invite__c.object-meta.xml
<CustomObject>
    <label>Session Lobby Invite</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Session Lobby Invite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Lobby Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>