unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__AppointmentStatus__c.field-meta.xml
<CustomField>
    <fullName>tsaa__AppointmentStatus__c</fullName>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>CannotComplete</fullName>
                <label>Cannot Complete</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>