unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>tsaa__Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>