unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__CustomerSessionLink__c.field-meta.xml
<CustomField>
    <fullName>tsaa__CustomerSessionLink__c</fullName>
    <label>Customer Session Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>