unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__End__c.field-meta.xml
<CustomField>
    <fullName>tsaa__End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>