unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>tsaa__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>