unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__Language__c.field-meta.xml
<CustomField>
    <fullName>tsaa__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>