unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__LobbyLink__c.field-meta.xml
<CustomField>
    <fullName>tsaa__LobbyLink__c</fullName>
    <label>Lobby Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>