unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__LoginAgent__c.field-meta.xml
<CustomField>
    <fullName>tsaa__LoginAgent__c</fullName>
    <label>Login Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>