unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>tsaa__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>