unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__RecordId__c.field-meta.xml
<CustomField>
    <fullName>tsaa__RecordId__c</fullName>
    <externalId>true</externalId>
    <label>Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>