unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__SessionId__c.field-meta.xml
<CustomField>
    <fullName>tsaa__SessionId__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>