unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/fields/tsaa__Start__c.field-meta.xml
<CustomField>
    <fullName>tsaa__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>