unpackaged/main/default/objects/tsaa__Session_Lobby_Invite__c/listViews/tsaa__All.listView-meta.xml
<ListView>
    <fullName>tsaa__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>